--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script defer src="script.js"></script>
   </head>
   <body>
-    <div class="message-container"></div>
+    <div id="message-container"></div>
     <form id="send-container">
       <input type="text" id="message-input" />
       <button type="submit" id="send-button">Send</button>
