Changed from localhost

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebDevChatApp</title>
     <link rel="stylesheet" href="styles.css" />
-    <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
+    <script
+      defer
+      src="http://192.168.0.12:3000/socket.io/socket.io.js"
+    ></script>
     <script defer src="script.js"></script>
   </head>
   <body>
